--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -67,6 +67,8 @@
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 <script src="../../assets/js/multiple-select/multiple-select.js"></script>
 <script src="../../assets/js/datatables/datatables.js"></script>
+<script src="../../assets/js/ku-global-search/valid_search_engines.js"></script>
+<script src="../../assets/js/ku-global-search/search.js"></script>
 {% endif %}
 {% endif %}
 
