--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -42,7 +42,7 @@
     > [class*="col-"]{
 
       z-index: 2;
-      & + [class*="col-"] {padding-left: 0;} 
+      & + [class*="col-"] {padding-left: 0;}
 
       &:last-child {
         padding-right: 0;
@@ -60,7 +60,7 @@
         width: 430px;
         height: 430px;
         opacity: 0.1;
-        background: url('../../images/footersegl.svg') no-repeat;
+        background: url('http://cms.ku.dk/grafik/images/social-icons/footersegl.svg') no-repeat;
         background-size: cover;
       }
 
@@ -123,7 +123,7 @@
 
       .padlock:after {
         content: " ";
-        background: url('../../images/padlock.svg') no-repeat;
+        background: url('http://cms.ku.dk/grafik/images/social-icons/padlock.svg') no-repeat;
         background-size: cover;
         top: 1px;
         left: 5px;
@@ -157,7 +157,7 @@
         justify-content: center;
 
         &.facebook {
-          background-image: url('../../images/social_icon_facebook.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_facebook.svg');
 
           &:hover {
             background-color: #3e5a98;
@@ -165,7 +165,7 @@
         }
 
         &.instagram {
-          background-image: url('../../images/social_icon_instagram.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_instagram.svg');
 
           &:hover {
             background-color: #3e5a98;
@@ -173,7 +173,7 @@
         }
 
         &.twitter {
-          background-image: url('../../images/social_icon_twitter.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_twitter.svg');
 
           &:hover {
             background-color: #2ca8df;
@@ -181,7 +181,7 @@
         }
 
         &.app {
-          background-image: url('../../images/social_icon_app.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_app.svg');
 
           &:hover {
             background-color: #901a1e;
@@ -189,7 +189,7 @@
         }
 
         &.coursera {
-          background-image: url('../../images/social_icon_coursera.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_coursera.svg');
 
           &:hover {
             background-color: #408bc9;
@@ -197,7 +197,7 @@
         }
 
         &.futurity {
-          background-image: url('../../images/social_icon_futurity.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_futurity.svg');
 
           &:hover {
             background-color: #f7ba20;
@@ -205,7 +205,7 @@
         }
 
         &.ku_video {
-          background-image: url('../../images/social_icon_ku_video.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_ku_video.svg');
 
           &:hover {
             background-color: #439639;
@@ -213,7 +213,7 @@
         }
 
         &.linkedin {
-          background-image: url('../../images/social_icon_linkedin.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_linkedin.svg');
 
           &:hover {
             background-color: #0078b6;
@@ -221,7 +221,7 @@
         }
 
         &.rss {
-          background-image: url('../../images/social_icon_rss.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_rss.svg');
 
           &:hover {
             background-color: #f7941e;
@@ -229,7 +229,7 @@
         }
 
         &.the_conversation {
-          background-image: url('../../images/social_icon_the_conversation.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_the_conversation.svg');
 
           &:hover {
             background-color: #d7352a;
@@ -237,7 +237,7 @@
         }
 
         &.vimeo {
-          background-image: url('../../images/social_icon_vimeo.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_vimeo.svg');
 
           &:hover {
             background-color: #d12223;
@@ -245,7 +245,7 @@
         }
 
         &.youtube {
-          background-image: url('../../images/social_icon_youtube.svg');
+          background-image: url('http://cms.ku.dk/grafik/images/social-icons/social_icon_youtube.svg');
 
           &:hover {
             background-color: #d12223;
