--- a/less/navbar.less
+++ b/less/navbar.less
@@ -632,11 +632,11 @@
       }
 
       &.eng {
-        background-image: url("../../images/flag-uk.gif");
+        background-image: url("http://cms.ku.dk/grafik/globalmenu/flag-uk.gif");
       }
 
       &.dan {
-        background-image: url("../../images/flag-dk.gif");
+        background-image: url("http://cms.ku.dk/grafik/globalmenu/flag-dk.gif");
       }
     }
 
