--- a/less/variables.less
+++ b/less/variables.less
@@ -124,9 +124,10 @@
 //** Element ID within SVG icon file.
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 //** Custom KU icon font.
-@custom-icon-font-name:       "arrow";
+@custom-icon-font-path:   "http://cms.ku.dk/grafik/";
+@custom-icon-font-name:   "arrow";
 //** Element ID within SVG icon file for KU custom font.
-@custom-icon-font-svg-id:        "arrow-font";
+@custom-icon-font-svg-id: "arrow-font";
 
 
 //== Components
