--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -10,12 +10,12 @@
 // Import the fonts
 @font-face {
   font-family: 'arrow';
-  src: url('@{icon-font-path}@{custom-icon-font-name}.eot');
-  src: url('@{icon-font-path}@{custom-icon-font-name}.eot?#iefix') format('embedded-opentype'),
-       url('@{icon-font-path}@{custom-icon-font-name}.woff2') format('woff2'),
-       url('@{icon-font-path}@{custom-icon-font-name}.woff') format('woff'),
-       url('@{icon-font-path}@{custom-icon-font-name}.ttf') format('truetype'),
-       url('@{icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}') format('svg');
+  src: url('@{custom-icon-font-path}@{custom-icon-font-name}.eot');
+  src: url('@{custom-icon-font-path}@{custom-icon-font-name}.eot?#iefix') format('embedded-opentype'),
+       url('@{custom-icon-font-path}@{custom-icon-font-name}.woff2') format('woff2'),
+       url('@{custom-icon-font-path}@{custom-icon-font-name}.woff') format('woff'),
+       url('@{custom-icon-font-path}@{custom-icon-font-name}.ttf') format('truetype'),
+       url('@{custom-icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}') format('svg');
    font-style: normal;
    font-weight: normal;
    line-height: 1;
