--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -107,7 +107,7 @@
 <!-- Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
-<script src="../../assets/js/ku-mobile-menu.js"></script>
+<script src="{{ site.baseurl }}/assets/js/ku-mobile-menu.js"></script>
 {% endif %}
 {% if page.slug == "examples" %}
 <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
