--- a/less/navbar.less
+++ b/less/navbar.less
@@ -101,12 +101,36 @@
     }
   }
 
+  .btn-global-search {
+    .dropdown-toggle {
+      width: 90px;
+      position: relative;
+      text-align: left;
+      padding-right: 20px;
+      .text-overflow();
+
+      &::after {
+        content: "\e252";
+        font-family: 'Glyphicons Halflings';
+        color: @gray;
+        font-size: 10px;
+        position: absolute;
+        top: 50%;
+        right: 8px;
+        transform: translateY(-50%);
+      }
+    }
+  }
+
   .dropdown-menu {
     li {
-      &.selected {
-        > a {
-          background-color: #efefef;
-        }
+      padding: 3px 20px;
+      font-size: 1.085em;
+
+      &.selected,
+      &:hover {
+        background-color: #efefef;
+        cursor: pointer;
       }
     }
   }
