--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -99,12 +99,12 @@
     </div>
   </div>
 </footer>
-<script src="http://cms.ku.dk/system/valid_search_engines.js?lang=da"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
-<script src="http://cms.ku.dk/bootstrap-styling/scripts/search.js"></script>
+<script src="{{ site.baseurl }}/assets/js/ku-global-search/valid_search_engines.js?lang=da"></script>
+<script src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
 {% if page.slug != "examples" %}
 <!-- Documentation extra - not for production -->
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
@@ -124,6 +124,8 @@
 <script src="../../dist/js/bootstrap.js"></script>
 <script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="../../custom/ku-mobile-menu.js"></script>
+<script src="../../assets/js/ku-global-search/valid_search_engines.js?lang=da"></script>
+<script src="../../assets/js/ku-global-search/search.js"></script>
 {% if page.slug != "examples" %}
 <script src="../../assets/js/docs.min.js"></script>
 {% endif %}
