--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -22,14 +22,11 @@
   }
 }
 
-.right-side {
-  @media (max-width: @screen-xs-max) {
-    margin-top: @grid-gutter-height;
-  }
+//.right-side {
   // @media (min-width: @screen-xs-max) and (max-width: @screen-md-min) {
   //   .pull-right();
   // }
-}
+//}
 // Main content part
 
 main {
