--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -62,6 +62,7 @@
 @import "ku-mobile-menu.less";
 @import "ku-footer.less";
 @import "ku-news.less";
+@import "ku-media.less";
 @import "ku-jumpboard.less";
 @import "ku-bxslider.less";
 @import "ku-datetimepicker.less";
