--- a/less/navbar.less
+++ b/less/navbar.less
@@ -122,15 +122,17 @@
     }
   }
 
-  .dropdown-menu {
-    li {
-      padding: 3px 20px;
-      font-size: 1.085em;
+  .search_form {
+    .dropdown-menu {
+      li {
+        padding: 3px 20px;
+        font-size: 1.085em;
 
-      &.selected,
-      &:hover {
-        background-color: #efefef;
-        cursor: pointer;
+        &.selected,
+        &:hover {
+          background-color: #efefef;
+          cursor: pointer;
+        }
       }
     }
   }
