--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -22,13 +22,22 @@
     flex-direction: column;
     justify-content: center;
     height: 86px;
-    padding-left: 2%;
+    padding-left: 10px;
+    @media (min-width: @screen-sm-min) {
+      padding-left: 15px;
+    }
     .ku-branding-text-major {
-      font-size: @ku-branding-text-font-size;
+      font-size: 1.16em;
+        @media (min-width: @screen-sm-min) {
+          font-size: @ku-branding-text-font-size;
+        }
     }
     .ku-branding-text-sub {
       font-size: @font-size-large;
       margin-top: 2px;
+    }
+    a {
+      color: inherit;
     }
   }
   .ku-branding-line {
