--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -39,10 +39,12 @@
     padding: @grid-gutter-width 0;
     position: relative;
 
-    > [class*="col-"]{
-
+    > [class*="col-"] {
       z-index: 2;
-      & + [class*="col-"] {padding-left: 0;}
+
+      & + [class*="col-"] {
+        padding-left: 0;
+      }
 
       &:last-child {
         padding-right: 0;
@@ -252,7 +254,8 @@
           }
         }
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
           background-color: @ku-footer-icon-bg;
         }
       }
@@ -264,145 +267,154 @@
   }
 }
 @media (max-width: @screen-xs-max) {
-  .globalfooter {
-    .container {
-      padding-right: 0;
-      padding-left: 0;
-    }
+  html:not(.non-responsive) {
+    .globalfooter {
+      background: @gray-light;
 
-    .footercontent {
-      width: 100%;
-      display: block;
-      padding: 0;
-
-      &:after {
-        content: none;
+      .container {
+        padding-right: 0;
+        padding-left: 0;
       }
 
-      .footercolumn {
+      .footercontent {
         width: 100%;
-        float: none;
+        display: block;
         padding: 0;
 
-        &:first-child:before {
-          display: none;
+        &:after {
+          content: none;
         }
 
-        .footer-heading {
-          cursor: pointer;
-          position: relative;
-          padding: 12px 25px 12px 20px;
-          margin-top: 0 !important;
+        .footercolumn {
+          width: 100%;
+          float: none;
+          padding: 0;
 
-          &[data-heading='open'] {
-            cursor: default;
-            padding-left: 0;
-            padding-bottom: 8px;
-            margin-bottom: 0;
+          &:first-child:before {
+            display: none;
+          }
 
-            &:after,
+          .footer-heading {
+            cursor: pointer;
+            position: relative;
+            padding: 12px 25px 12px 20px;
+            margin-top: 0 !important;
+
+            &[data-heading='open'] {
+              cursor: default;
+              padding-left: 0;
+              padding-bottom: 8px;
+              margin-bottom: 0;
+
+              &:after,
+              &:before {
+                display: none;
+              }
+            }
+
+            &[data-heading='toggle'] {
+              + ul.footerlinks {
+                display: none;
+                margin: 0;
+                background-color: @white-color;
+                backface-visibility: hidden;
+                -webkit-perspective: 1000;
+                transform: translate3d(0, 0, 0);
+              }
+            }
+
             &:before {
-              display: none;
+              position: absolute;
+              bottom: -2px;
+              left: 0;
+              display: block;
+              content: ' ';
+              background: @white-color;
+              height: 1px;
+              width: calc(100% + @margin10);
+              margin-left: -@margin10;
             }
-          }
 
-          &[data-heading='toggle'] {
-            + ul.footerlinks {
-              display: none;
-              margin: 0;
-              background-color: @white-color;
-              backface-visibility: hidden;
-              -webkit-perspective: 1000;
-              transform: translate3d(0, 0, 0);
-            }
-          }
-
-          &:before {
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            display: block;
-            content: ' ';
-            background: @white-color;
-            height: 1px;
-            width: calc(100% + @margin10);
-            margin-left: -@margin10;
-          }
-
-          &:after {
-            font-family: @custom-icon-font-name;
-            content: '\0043';
-            z-index: 2;
-            color: @white-color;
-            font-size: 13px;
-            position: absolute;
-            top: 50%;
-            right: 15px;
-            left: auto;
-            transform: rotate(0deg) translate3d(0, 0, 0) translateY(-50%);
-            transition: transform 0.4s ease-in-out;
-          }
-
-          &.open {
             &:after {
-              transform: rotate(90deg) translate3d(0, 0, 0);
+              font-family: @custom-icon-font-name;
+              content: '\0043';
+              z-index: 2;
+              color: @white-color;
+              font-size: 13px;
+              position: absolute;
+              top: 50%;
+              right: 15px;
+              left: auto;
+              transform: rotate(0deg) translate3d(0, 0, 0) translateY(-50%);
               transition: transform 0.4s ease-in-out;
             }
+
+            &.open {
+              &:after {
+                transform: rotate(90deg) translate3d(0, 0, 0);
+                transition: transform 0.4s ease-in-out;
+              }
+            }
           }
-        }
 
-        ul.footerlinks {
-          li {
-            color: #4a4949;
-            font-weight: 400;
-            font-size: @font-size-large;
-            padding: 0;
-            position: relative;
+          ul.footerlinks {
+            li {
+              color: #4a4949;
+              font-weight: 400;
+              font-size: @font-size-large;
+              padding: 0;
+              position: relative;
 
-            a {
-              color: #606060;
-              padding: @padding-small-vertical @padding-large-horizontal;
-              display: block;
-              border-bottom: 1px solid @gray;
+              a {
+                color: #606060;
+                padding: @padding-small-vertical @padding-large-horizontal;
+                display: block;
+                border-bottom: 1px solid @gray;
 
-              &:active,
-              &:focus {
-                background-color: #cdcdcd;
+                &:active,
+                &:focus {
+                  background-color: #cdcdcd;
+                }
+
+                &:hover {
+                  color: initial;
+                }
+
+                .padlock {
+                  &:after {
+                    display: none;
+                  }
+                }
               }
 
-              &:hover {
-                color: initial;
-              }
-
-              .padlock {
-                &:after {
-                  display: none;
+              &:last-child {
+                a {
+                  border-bottom: 0;
                 }
               }
             }
+          }
+        }
+      }
 
-            &:last-child {
-              a {
-                border-bottom: 0;
-              }
-            }
+      .social-items {
+        padding: 0 @padding20 @padding20;
+        width: 100%;
+
+        .social-item {
+          margin: 7px 16px 0 0;
+
+          .social-icon {
+            width: 35px;
+            height: 35px;
           }
         }
       }
     }
-
-    .social-items {
-      padding: 0 @padding20 @padding20;
-      width: 100%;
-
-      .social-item {
-        margin: 7px 16px 0 0;
-
-        .social-icon {
-          width: 35px;
-          height: 35px;
-        }
-      }
+  }
+  .non-responsive {
+    .globalfooter {
+      background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
     }
   }
 }
