--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -17,12 +17,11 @@
           <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
-          <li><a href="../ku-courses/">Kurser.ku.dk</a>
-          <li><a href="../ku-course-details/">Kursus detaljeside</a></li>
+          <li><a href="../non-responsive/">Non responsive page</a></li>
           <li class="active"><a href="#">Link 2.1</a>
             <ul>
-              <li><a href="#">Link 3.1</a></li>
-              <li><a href="#">Link 3.2</a></li>
+              <li><a href="../ku-courses/">Kurser.ku.dk</a>
+              <li><a href="../ku-course-details/">Kursus detaljeside</a></li>
               <li><a href="#">Link 3.3</a>
                 <ul>
                   <li><a href="#">Link 4.1 - one more very, very, very, long text</a></li>
