--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1881,6 +1881,7 @@
 
       &.full {
         background: @jura-sub_3;
+        color: @white-color;
 
         &:hover {
           background: @jura-sub_3-hover!important;
