--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2202,7 +2202,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translateY(-50%) translateX(-50%);
+        transform: translateY(-50%) translateX(-50%) translate3d(0px,0px,0px);
       }
     }
     // Position image left
@@ -2279,6 +2279,7 @@
     .header {
       position: absolute;
       left: 0;
+      right: 0;
       bottom: 0;
       color: inherit;
     }
