--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -68,8 +68,9 @@
   //border-color: rgba(0,0,0,.1);
   color: @gray-base;
 
-  #navbar_menu,
-  #topbar_menu {
+  #navbar_menu-clone,
+  #topbar_menu-clone {
+    background: @white-color;
     li:not(.mm-opened) {
       border-bottom: 1px solid lighten(@gray, 10%);
 
@@ -78,16 +79,9 @@
         transition: all 0.2s ease-in-out;
       }
     }
-
-    li {
-      &.mm-opened {
-        background: lighten(@gray-base, 80%);
-      }
-    }
   }
 
-  #leftmenu_2,
-  #localmenu {
+  #localmenu, #leftmenu2-clone {
     // Faculty colors for sublevel 1
     background: @ku-red;
 
@@ -122,33 +116,34 @@
         border-color: @white-color;
       }
     }
-// 1px solid
-    li {
-      border-bottom: lighten(@ku-red, 7%);
-
-      .theme-samf & {
-        border-bottom: lighten(@samf, 7%);
-      }
-
-      .theme-hum & {
-        border-bottom: lighten(@hum, 7%);
-      }
-
-      .theme-science & {
-        border-bottom: lighten(@science, 7%);
-      }
-
-      .theme-sund & {
-        border-bottom: lighten(@sund, 7%);
-      }
-
-      .theme-jur & {
-        border-bottom: lighten(@jura, 7%);
-      }
-
-      .theme-teo & {
-        border-bottom: lighten(@teol, 7%);
-      }
+    // 1px solid
+     li {
+       color: @white-color;
+    //   border-bottom: lighten(@ku-red, 7%);
+    //
+    //   .theme-samf & {
+    //     border-bottom: lighten(@samf, 7%);
+    //   }
+    //
+    //   .theme-hum & {
+    //     border-bottom: lighten(@hum, 7%);
+    //   }
+    //
+    //   .theme-science & {
+    //     border-bottom: lighten(@science, 7%);
+    //   }
+    //
+    //   .theme-sund & {
+    //     border-bottom: lighten(@sund, 7%);
+    //   }
+    //
+    //   .theme-jur & {
+    //     border-bottom: lighten(@jura, 7%);
+    //   }
+    //
+    //   .theme-teo & {
+    //     border-bottom: lighten(@teol, 7%);
+    //   }
     }
   }
 
@@ -420,7 +415,7 @@
   font: inherit;
   font-size: @font-size-base;
   @media screen and (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-      font-size: @font-size-large;
+    font-size: @font-size-large;
   }
   line-height: 20px;
 
@@ -765,12 +760,12 @@ li.mm-vertical.mm-opened {
     li.mm-opened {
       .mm-panel {
         // Faculty colors for sublevel 2
-        background: @gray;
+        //background: @gray;
         color: @gray-base;
 
-        li:not(.last-child) {
-          border-bottom: 1px solid darken(@gray, 5%);
-        }
+        // li:not(.last-child) {
+        //   border-bottom: 1px solid darken(@gray, 5%);
+        // }
 
         .mm-next {
           &:after {
@@ -812,339 +807,3 @@ li.mm-vertical.mm-opened {
     }
   }
 }
-
-.mm-menu.mm-offcanvas.mm-right {
-  left: auto;
-}
-
-html.mm-right.mm-opening {
-  .mm-slideout {
-    transform: translate(-80%,0);
-    transform: translate3d(-80%,0,0);
-  }
-}
-
-html.mm-front {
-  .mm-slideout {
-    transform: none !important;
-    z-index: 0;
-  }
-
-  #mm-blocker {
-    z-index: 3;
-  }
-
-  .mm-menu.mm-offcanvas {
-    z-index: 2000;
-  }
-}
-
-.mm-menu.mm-offcanvas.mm-front {
-  transition: transform 0.4s ease;
-  transform: translate(-100%,0);
-  transform: translate3d(-100%,0,0);
-}
-
-.mm-menu.mm-offcanvas.mm-next {
-  transition: transform 0.4s ease;
-  transform: translate(-100%,0);
-  transform: translate3d(-100%,0,0);
-}
-
-.mm-menu.mm-offcanvas.mm-front.mm-right {
-  transform: translate(100%,0);
-  transform: translate3d(100%,0,0);
-}
-
-.mm-menu.mm-offcanvas.mm-next.mm-right {
-  transform: translate(100%,0);
-  transform: translate3d(100%,0,0);
-}
-
-.mm-menu.mm-offcanvas.mm-top {
-  transform: translate(0,-100%);
-  transform: translate3d(0,-100%,0);
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  height: 80%;
-  min-height: 140px;
-  max-height: 880px;
-}
-
-.mm-menu.mm-offcanvas.mm-bottom {
-  transform: translate(0,100%);
-  transform: translate3d(0,100%,0);
-  top: auto;
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  height: 80%;
-  min-height: 140px;
-  max-height: 880px;
-}
-
-html.mm-opening {
-  .mm-menu.mm-offcanvas.mm-front {
-    transform: translate(0,0);
-    transform: translate3d(0,0,0);
-  }
-
-  .mm-menu.mm-offcanvas.mm-next {
-    transform: translate(0,0);
-    transform: translate3d(0,0,0);
-  }
-
-  .mm-slideout {
-    transform: translate(80%,0);
-    transform: translate3d(80%,0,0);
-  }
-}
-
-.mm-page {
-  box-sizing: border-box;
-  position: relative;
-}
-
-.mm-slideout {
-  transition: transform 0.4s ease;
-  z-index: 1;
-}
-
-html.mm-opened {
-  overflow-x: hidden;
-  position: relative;
-}
-
-html.mm-blocking {
-  overflow: hidden;
-
-  body {
-    overflow: hidden;
-  }
-
-  #mm-blocker {
-    display: block;
-  }
-}
-
-.mm-background {
-  .mm-page {
-    background: inherit;
-  }
-}
-
-#mm-blocker {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-}
-
-.mm-menu.mm-offcanvas {
-  z-index: 0;
-  display: none;
-  position: fixed;
-  width: 80%;
-  min-width: 140px;
-  max-width: 440px;
-}
-
-.mm-menu.mm-offcanvas.mm-current {
-  display: block;
-}
-
-.mm-menu.mm-offcanvas.mm-no-csstransforms.mm-current.mm-opened {
-  z-index: 10;
-}
-
-html.mm-opened.mm-dragging {
-  .mm-menu {
-    -webkit-transition-duration: 0s;
-    transition-duration: 0s;
-  }
-
-  .mm-slideout {
-    -webkit-transition-duration: 0s;
-    transition-duration: 0s;
-  }
-}
-
-.mm-menu.mm-hoverselected {
-  .mm-listview {
-    > li {
-      > a.mm-fullsubopen+a {
-        -webkit-transition: background 0.4s ease;
-        transition: background 0.4s ease;
-      }
-
-      > a.mm-fullsubopen+span {
-        -webkit-transition: background 0.4s ease;
-        transition: background 0.4s ease;
-      }
-
-      > a {
-        &:not(.mm-fullsubopen) {
-          -webkit-transition: background 0.4s ease;
-          transition: background 0.4s ease;
-
-          &:hover {
-            .backgroundColorFix(@white-color, .5);
-          }
-        }
-      }
-
-      > a.mm-fullsubopen {
-        &:hover+span {
-          .backgroundColorFix(@white-color, .5);
-        }
-      }
-    }
-  }
-}
-
-.mm-menu.mm-parentselected {
-  .mm-listview {
-    > li {
-      > a.mm-fullsubopen+a {
-        -webkit-transition: background 0.4s ease;
-        transition: background 0.4s ease;
-      }
-
-      > a.mm-fullsubopen+span {
-        -webkit-transition: background 0.4s ease;
-        transition: background 0.4s ease;
-      }
-
-      > a {
-        &:not(.mm-fullsubopen) {
-          -webkit-transition: background 0.4s ease;
-          transition: background 0.4s ease;
-        }
-      }
-
-      > a.mm-selected.mm-fullsubopen+a {
-        .backgroundColorFix(@white-color, .5);
-      }
-
-      > a.mm-selected.mm-fullsubopen+span {
-        .backgroundColorFix(@white-color, .5);
-      }
-
-      > a.mm-selected {
-        &:not(.mm-fullsubopen) {
-          .backgroundColorFix(@white-color, .5);
-        }
-      }
-    }
-  }
-}
-
-.mm-menu.mm-multiline {
-  .mm-listview {
-    > li {
-      > a {
-        text-overflow: clip;
-        white-space: normal;
-      }
-
-      > span {
-        text-overflow: clip;
-        white-space: normal;
-      }
-    }
-  }
-}
-
-.mm-sronly {
-  text-indent: 10px;
-  overflow: hidden;
-  display: block;
-  width: 1px;
-  height: 1px;
-  position: absolute;
-  z-index: -1;
-}
-
-html.mm-pagedim-black {
-  #mm-blocker {
-    opacity: 0;
-    background: @gray-base;
-  }
-}
-
-html.mm-pagedim-black.mm-opening {
-  #mm-blocker {
-    opacity: 0.3;
-    -webkit-transition: opacity 0.3s ease 0.3s;
-    transition: opacity 0.3s ease 0.3s;
-  }
-}
-@media all and (max-width:175px) {
-  html.mm-right.mm-opening {
-    .mm-slideout {
-      transform: translate(-140px,0);
-      transform: translate3d(-140px,0,0);
-    }
-  }
-
-  html.mm-opening {
-    .mm-slideout {
-      transform: translate(140px,0);
-      transform: translate3d(140px,0,0);
-    }
-  }
-}
-@media all and (min-width:550px) {
-  html.mm-right.mm-opening {
-    .mm-slideout {
-      transform: translate(-440px,0);
-      transform: translate3d(-440px,0,0);
-    }
-  }
-
-  html.mm-opening {
-    .mm-slideout {
-      transform: translate(440px,0);
-      transform: translate3d(440px,0,0);
-    }
-  }
-}
-
-
-
-//
-// #mobileleftmenu a {
-// 	border-left: transparent;
-// 	border-right: transparent;
-// }
-//
-// 	#mobileleftmenu > div > div,
-// 	#mobileleftmenu > div > div > ul > ul > li > div {
-// 		padding-left: 0;
-// 		padding-top: 0;
-// 		padding-bottom: 0;
-// 	}
-//
-// 	#mobileleftmenu > div > div > ul > ul > li,
-// 	#mobileleftmenu > div > div > ul > li {
-// 		padding-left: 20px;
-// 	}
-//
-//
-// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li {
-// 		border-bottom: #BFBFBF !important;
-// 		//margin-left: -20px;
-// 	}
-//
-// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li a {
-// 		//padding-left: 40px;
-// 	}
-//
-//
-// 	#mobileleftmenu > div > div > ul > ul > li > div > ul  li:last-child {
-// 		border-bottom: none !important;
-// 	}
