--- a/less/variables.less
+++ b/less/variables.less
@@ -124,7 +124,7 @@
 //** Element ID within SVG icon file.
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 //** Custom KU icon font.
-@custom-icon-font-path:   "http://cms.ku.dk/grafik/";
+@custom-icon-font-path:   "http://cms.ku.dk/bootstrap-styling/fonts/";
 @custom-icon-font-name:   "arrow";
 //** Element ID within SVG icon file for KU custom font.
 @custom-icon-font-svg-id: "arrow-font";
