--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,6 +10,7 @@
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
 <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/mmenu/jquery.mmenu.css" rel="stylesheet">
 {% if page.category == "non-responsive" %}
 <link href="{{ site.baseurl }}/assets/css/non-responsive/non-responsive.css" rel="stylesheet">
 {% endif %}
@@ -32,6 +33,7 @@
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
+<link href="../../assets/css/mmenu/jquery.mmenu.css" rel="stylesheet">
 {% if page.category == "non-responsive" %}
 <link href="../../assets/css/non-responsive/non-responsive.css" rel="stylesheet">
 {% endif %}
