--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -1,10 +1,7 @@
 <header>
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
     <div class="container relative">
-      <a class="topbar-logo" href="/">
-         <img class="img-responsive" src="{% if site.github %}{{ site.baseurl }}/images/ku_top_dk.svg{% else %}http://cms.ku.dk/billeder/ku_top_dk.svg{% endif %}" alt="Københavns universitet">
-      </a>
-
+      <a class="topbar-logo" title="Start" href="/"></a>
       <div id="topbar" class="navbar-collapse collapse">
         <ul id="topbar_menu" class="nav navbar-nav navbar-right">
           <li><a href="#">Kalender</a></li>
