--- a/docs/assets/css/kurser.ku.dk/kurser.css
+++ b/docs/assets/css/kurser.ku.dk/kurser.css
@@ -172,15 +172,13 @@ ul.workload .total {
     float: right;
     margin-left: 10px;
   }
-  .show-filter .glyphicon {
-    margin-left: 3px;
-  }
-  .show-filter .glyphicon::before {
+  .show-filter::after {
+    font-family: 'Glyphicons Halflings';
     content: "\e259";
     color: #252525;
+    margin-left: 7px;
   }
-  .show-filter.open .glyphicon::before {
+  .show-filter.open::after {
     content: "\e260";
-    color: #252525;
   }
 }
