--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -8,8 +8,8 @@
   <h2 id="examples-framework">Using the framework</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/ku-default/">
-        <img src="{{ site.baseurl }}/examples/screenshots/ku_standard.png" alt="KU templates">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/ku-default/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/ku_standard.png" alt="KU templates">
       </a>
       <h3>KU layout templates</h3>
       <p>Templates for University of Copenhagen.</p>
@@ -18,16 +18,16 @@
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/grid/">
-        <img src="{{ site.baseurl }}/examples/screenshots/grid.jpg" alt="Multiple grids example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/grid/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/grid.jpg" alt="Multiple grids example">
       </a>
       <h3>Grids</h3>
       <p>Multiple examples of grid layouts with all four tiers, nesting, and more.</p>
     </div>
     <div class="clearfix visible-xs"></div>
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/non-responsive/">
-        <img src="{{ site.baseurl }}/examples/screenshots/non-responsive.jpg" alt="Non-responsive example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/non-responsive/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/non-responsive.jpg" alt="Non-responsive example">
       </a>
       <h3>Non-responsive Bootstrap</h3>
       <p>Easily disable the responsiveness of Bootstrap <a href="#disable-responsive">per our docs</a>.</p>
@@ -37,15 +37,15 @@
   <h2 id="examples-navbars">Navbars in action</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/navbar/">
-        <img src="{{ site.baseurl }}/examples/screenshots/navbar.jpg" alt="Navbar example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/navbar/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/navbar.jpg" alt="Navbar example">
       </a>
       <h3>Navbar</h3>
       <p>Super basic template that includes the navbar along with some additional content.</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/navbar-static-top/">
-        <img src="{{ site.baseurl }}/examples/screenshots/navbar-static.jpg" alt="Static top navbar example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/navbar-static-top/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/navbar-static.jpg" alt="Static top navbar example">
       </a>
       <h3>Static top navbar</h3>
       <p>Super basic template with a static top navbar along with some additional content.</p>
@@ -53,8 +53,8 @@
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/navbar-fixed-top/">
-        <img src="{{ site.baseurl }}/examples/screenshots/navbar-fixed.jpg" alt="Fixed navbar example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/navbar-fixed-top/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/navbar-fixed.jpg" alt="Fixed navbar example">
       </a>
       <h3>Fixed navbar</h3>
       <p>Super basic template with a fixed top navbar along with some additional content.</p>
@@ -64,8 +64,8 @@
   <h2 id="examples-custom">Custom components</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/carousel/">
-        <img src="{{ site.baseurl }}/examples/screenshots/carousel.jpg" alt="Carousel example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/carousel/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/carousel.jpg" alt="Carousel example">
       </a>
       <h3>Carousel</h3>
       <p>Customize the navbar and carousel, then add some new components.</p>
@@ -73,15 +73,15 @@
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/blog/">
-        <img src="{{ site.baseurl }}/examples/screenshots/blog.jpg" alt="Blog layout example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/blog/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/blog.jpg" alt="Blog layout example">
       </a>
       <h3>Blog</h3>
       <p>Simple two-column blog layout with custom navigation, header, and type.</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/dashboard/">
-        <img src="{{ site.baseurl }}/examples/screenshots/dashboard.jpg" alt="Dashboard example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/dashboard/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/dashboard.jpg" alt="Dashboard example">
       </a>
       <h3>Dashboard</h3>
       <p>Basic structure for an admin dashboard with fixed sidebar and navbar.</p>
@@ -89,8 +89,8 @@
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/signin/">
-        <img src="{{ site.baseurl }}/examples/screenshots/sign-in.jpg" alt="Sign-in page example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/signin/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/sign-in.jpg" alt="Sign-in page example">
       </a>
       <h3>Sign-in page</h3>
       <p>Custom form layout and design for a simple sign in form.</p>
@@ -98,15 +98,15 @@
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/sticky-footer/">
-        <img src="{{ site.baseurl }}/examples/screenshots/sticky-footer.jpg" alt="Sticky footer example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/sticky-footer/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/sticky-footer.jpg" alt="Sticky footer example">
       </a>
       <h3>Sticky footer</h3>
       <p>Attach a footer to the bottom of the viewport when the content is shorter than it.</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/sticky-footer-navbar/">
-        <img src="{{ site.baseurl }}/examples/screenshots/sticky-footer-navbar.jpg" alt="Sticky footer with navbar example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/sticky-footer-navbar/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/sticky-footer-navbar.jpg" alt="Sticky footer with navbar example">
       </a>
       <h3>Sticky footer with navbar</h3>
       <p>Attach a footer to the bottom of the viewport with a fixed navbar at the top.</p>
@@ -116,8 +116,8 @@
   <h2 id="examples-experiments">Experiments</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{{ site.baseurl }}/examples/offcanvas/">
-        <img src="{{ site.baseurl }}/examples/screenshots/offcanvas.jpg" alt="Off-canvas navigation example">
+      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/offcanvas/">
+        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/offcanvas.jpg" alt="Off-canvas navigation example">
       </a>
       <h3>Off-canvas</h3>
       <p>Build a toggleable off-canvas navigation menu for use with Bootstrap.</p>
