--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -15,6 +15,11 @@
       text-align: left;
     }
   }
+  a {
+    &:not(.btn):visited {
+      color: @link-visited-color;
+    }
+  }
 }
 //
 // Global footer
