--- a/docs/assets/css/kurser.ku.dk/kurser.css
+++ b/docs/assets/css/kurser.ku.dk/kurser.css
@@ -64,7 +64,9 @@ table>thead>tr>th, .control-label {
   color: #999;
   font-size: .83em;
 }
-
+.right-side .panel-default:first-child > .panel-heading {
+  border-top: 0;
+}
 ul.workload li {
   width: 50%;
   float: left;
