--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -15,19 +15,19 @@
   margin-top: 6px !important;
   margin-bottom: 6px !important;
   max-width: none !important;
-  border-collapse: separate !important;
+  /*border-collapse: separate !important;*/
 }
-.dataTable td,
-.dataTable th {
+
+.dataTable td, .dataTable th {
   -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+          box-sizing: content-box;
 }
-.dataTable td.dataTables_empty,
-.dataTable th.dataTables_empty {
+
+.dataTable td.dataTables_empty, .dataTable th.dataTables_empty {
   text-align: center;
 }
-.dataTable.nowrap th,
-.dataTable.nowrap td {
+
+.dataTable.nowrap th, .dataTable.nowrap td {
   white-space: nowrap;
 }
 
@@ -36,40 +36,44 @@
   text-align: left;
   white-space: nowrap;
 }
+
 .dataTables_wrapper .dataTables_length select {
   width: 75px;
   display: inline-block;
 }
-.dataTables_wrapper select.input-sm {
-    height: 29px;
-    line-height: 26px;
-}
+
 .dataTables_wrapper .dataTables_filter {
   text-align: right;
 }
+
 .dataTables_wrapper .dataTables_filter label {
   font-weight: normal;
   white-space: nowrap;
   text-align: left;
 }
+
 .dataTables_wrapper .dataTables_filter input {
   margin-left: 0.5em;
   display: inline-block;
   width: auto;
 }
+
 .dataTables_wrapper .dataTables_info {
   padding-top: 8px;
   white-space: nowrap;
 }
+
 .dataTables_wrapper .dataTables_paginate {
   margin: 0;
   white-space: nowrap;
   text-align: right;
 }
+
 .dataTables_wrapper .dataTables_paginate ul.pagination {
   margin: 2px 0;
   white-space: nowrap;
 }
+
 .dataTables_wrapper .dataTables_processing {
   position: absolute;
   top: 50%;
@@ -81,29 +85,20 @@
   padding: 1em 0;
 }
 
-.dataTable thead > tr > th.sorting_asc, .dataTable thead > tr > th.sorting_desc, .dataTable thead > tr > th.sorting,
-.dataTable thead > tr > td.sorting_asc,
-.dataTable thead > tr > td.sorting_desc,
-.dataTable thead > tr > td.sorting {
+.dataTable thead>tr>th.sorting_asc, .dataTable thead>tr>th.sorting_desc, .dataTable thead>tr>th.sorting, .dataTable thead>tr>td.sorting_asc, .dataTable thead>tr>td.sorting_desc, .dataTable thead>tr>td.sorting {
   padding-right: 30px;
 }
-.dataTable thead > tr > th:active,
-.dataTable thead > tr > td:active {
+
+.dataTable thead>tr>th:active, .dataTable thead>tr>td:active {
   outline: none;
 }
-.dataTable thead .sorting,
-.dataTable thead .sorting_asc,
-.dataTable thead .sorting_desc,
-.dataTable thead .sorting_asc_disabled,
-.dataTable thead .sorting_desc_disabled {
+
+.dataTable thead .sorting, .dataTable thead .sorting_asc, .dataTable thead .sorting_desc, .dataTable thead .sorting_asc_disabled, .dataTable thead .sorting_desc_disabled {
   cursor: pointer;
   position: relative;
 }
-.dataTable thead .sorting:after,
-.dataTable thead .sorting_asc:after,
-.dataTable thead .sorting_desc:after,
-.dataTable thead .sorting_asc_disabled:after,
-.dataTable thead .sorting_desc_disabled:after {
+
+.dataTable thead .sorting:after, .dataTable thead .sorting_asc:after, .dataTable thead .sorting_desc:after, .dataTable thead .sorting_asc_disabled:after, .dataTable thead .sorting_desc_disabled:after {
   position: absolute;
   bottom: 8px;
   right: 8px;
@@ -111,21 +106,24 @@
   font-family: 'Glyphicons Halflings';
   opacity: 0.5;
 }
+
 .dataTable thead .sorting:after {
   opacity: 0.2;
   content: "\e150";
   /* sort */
 }
+
 .dataTable thead .sorting_asc:after {
   content: "\e155";
   /* sort-by-attributes */
 }
+
 .dataTable thead .sorting_desc:after {
   content: "\e156";
   /* sort-by-attributes-alt */
 }
-.dataTable thead .sorting_asc_disabled:after,
-.dataTable thead .sorting_desc_disabled:after {
+
+.dataTable thead .sorting_asc_disabled:after, .dataTable thead .sorting_desc_disabled:after {
   color: #eee;
 }
 
@@ -138,13 +136,12 @@
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
-.dataTables_scrollBody table thead .sorting:after,
-.dataTables_scrollBody table thead .sorting_asc:after,
-.dataTables_scrollBody table thead .sorting_desc:after {
+
+.dataTables_scrollBody table thead .sorting:after, .dataTables_scrollBody table thead .sorting_asc:after, .dataTables_scrollBody table thead .sorting_desc:after {
   display: none;
 }
-.dataTables_scrollBody table tbody tr:first-child th,
-.dataTables_scrollBody table tbody tr:first-child td {
+
+.dataTables_scrollBody table tbody tr:first-child th, .dataTables_scrollBody table tbody tr:first-child td {
   border-top: none;
 }
 
@@ -154,34 +151,29 @@
 }
 
 @media screen and (max-width: 767px) {
-  .dataTables_wrapper .dataTables_length,
-  .dataTables_wrapper .dataTables_filter,
-  .dataTables_wrapper .dataTables_info,
-  .dataTables_wrapper .dataTables_paginate {
+  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_paginate {
     text-align: left;
   }
 }
-.dataTable.table-condensed > thead > tr > th {
+
+.dataTable.table-condensed>thead>tr>th {
   padding-right: 20px;
 }
-.dataTable.table-condensed .sorting:after,
-.dataTable.table-condensed .sorting_asc:after,
-.dataTable.table-condensed .sorting_desc:after {
+
+.dataTable.table-condensed .sorting:after, .dataTable.table-condensed .sorting_asc:after, .dataTable.table-condensed .sorting_desc:after {
   top: 6px;
   right: 6px;
 }
 
-.table-bordered.dataTable th,
-.table-bordered.dataTable td {
+.table-bordered.dataTable th, .table-bordered.dataTable td {
   border-left-width: 0;
 }
-.table-bordered.dataTable th:last-child, .table-bordered.dataTable th:last-child,
-.table-bordered.dataTable td:last-child,
-.table-bordered.dataTable td:last-child {
+
+.table-bordered.dataTable th:last-child, .table-bordered.dataTable th:last-child, .table-bordered.dataTable td:last-child, .table-bordered.dataTable td:last-child {
   border-right-width: 0;
 }
-.table-bordered.dataTable tbody th,
-.table-bordered.dataTable tbody td {
+
+.table-bordered.dataTable tbody th, .table-bordered.dataTable tbody td {
   border-bottom-width: 0;
 }
 
@@ -189,19 +181,19 @@
   border-bottom-width: 0;
 }
 
-.table-responsive > .dataTables_wrapper > div.row {
+.table-responsive>.dataTables_wrapper>div.row {
   margin: 0;
 }
-.table-responsive > .dataTables_wrapper > div.row > div[class^="col-"]:first-child {
+
+.table-responsive>.dataTables_wrapper>div.row>div[class^="col-"]:first-child {
   padding-left: 0;
 }
-.table-responsive > .dataTables_wrapper > div.row > div[class^="col-"]:last-child {
+
+.table-responsive>.dataTables_wrapper>div.row>div[class^="col-"]:last-child {
   padding-right: 0;
 }
 
-
-.dataTable.fixedHeader-floating,
-.dataTable.fixedHeader-locked {
+.dataTable.fixedHeader-floating, .dataTable.fixedHeader-locked {
   background-color: white;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
@@ -221,58 +213,57 @@
   }
 }
 
-
-.dataTable.dtr-inline.collapsed > tbody > tr > td.child,
-.dataTable.dtr-inline.collapsed > tbody > tr > th.child,
-.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty {
+.dataTable.dtr-inline.collapsed>tbody>tr>td.child, .dataTable.dtr-inline.collapsed>tbody>tr>th.child, .dataTable.dtr-inline.collapsed>tbody>tr>td.dataTables_empty {
   cursor: default !important;
 }
-.dataTable.dtr-inline.collapsed > tbody > tr > td.child:before,
-.dataTable.dtr-inline.collapsed > tbody > tr > th.child:before,
-.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty:before {
+
+.dataTable.dtr-inline.collapsed>tbody>tr>td.child:before, .dataTable.dtr-inline.collapsed>tbody>tr>th.child:before, .dataTable.dtr-inline.collapsed>tbody>tr>td.dataTables_empty:before {
   display: none !important;
 }
-.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child,
-.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child {
+
+.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child, .dataTable.dtr-inline.collapsed>tbody>tr>th:first-child {
   position: relative;
-  padding-left: 30px;
+  padding-left: 10px;
   cursor: pointer;
+  padding-bottom: 36px;
 }
-.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:before,
-.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
-  top: 9px;
-  left: 4px;
+
+.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, .dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
+  bottom: 9px;
+  left: 11px;
   height: 14px;
-  width: 14px;
+  width: 20px;
   display: block;
   position: absolute;
-  color: white;
-  border: 2px solid white;
-  border-radius: 14px;
-  -webkit-box-shadow: 0 0 3px #444;
-          box-shadow: 0 0 3px #444;
+  padding-top: 3px;
+  color: #666;
+  border: 2px solid #ccc;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Glyphicons Halflings';
   line-height: 14px;
-  content: '+';
-  background-color: #337ab7;
+  content: "\e252";
+  font-size: 10px;
+  /*background-color: #337ab7;*/
 }
-.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child:before,
-.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before {
-  content: '-';
-  background-color: #d33333;
+
+.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before, .dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
+  content: "\e253";
+  padding-top: 1px;
+  padding-bottom: 2px;
+  /*background-color: #d33333;*/
 }
-.dataTable.dtr-inline.collapsed > tbody > tr.child td:before {
+
+.dataTable.dtr-inline.collapsed>tbody>tr.child td:before {
   display: none;
 }
-.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child,
-.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child {
+
+.dataTable.dtr-inline.collapsed.compact>tbody>tr>td:first-child, .dataTable.dtr-inline.collapsed.compact>tbody>tr>th:first-child {
   padding-left: 27px;
 }
-.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child:before,
-.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:before {
+
+.dataTable.dtr-inline.collapsed.compact>tbody>tr>td:first-child:before, .dataTable.dtr-inline.collapsed.compact>tbody>tr>th:first-child:before {
   top: 5px;
   left: 4px;
   height: 14px;
@@ -281,13 +272,13 @@
   line-height: 14px;
   text-indent: 3px;
 }
-.dataTable.dtr-column > tbody > tr > td.control,
-.dataTable.dtr-column > tbody > tr > th.control {
+
+.dataTable.dtr-column>tbody>tr>td.control, .dataTable.dtr-column>tbody>tr>th.control {
   position: relative;
   cursor: pointer;
 }
-.dataTable.dtr-column > tbody > tr > td.control:before,
-.dataTable.dtr-column > tbody > tr > th.control:before {
+
+.dataTable.dtr-column>tbody>tr>td.control:before, .dataTable.dtr-column>tbody>tr>th.control:before {
   top: 50%;
   left: 50%;
   height: 16px;
@@ -300,43 +291,51 @@
   border: 2px solid white;
   border-radius: 14px;
   -webkit-box-shadow: 0 0 3px #444;
-          box-shadow: 0 0 3px #444;
+  box-shadow: 0 0 3px #444;
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
   content: '+';
   background-color: #337ab7;
 }
-.dataTable.dtr-column > tbody > tr.parent td.control:before,
-.dataTable.dtr-column > tbody > tr.parent th.control:before {
+
+.dataTable.dtr-column>tbody>tr.parent td.control:before, .dataTable.dtr-column>tbody>tr.parent th.control:before {
   content: '-';
   background-color: #d33333;
 }
-.dataTable > tbody > tr.child {
+
+.dataTable>tbody>tr.child {
   padding: 0.5em 1em;
 }
-.dataTable > tbody > tr.child:hover {
+
+.dataTable>tbody>tr.child:hover {
   background: transparent !important;
 }
-.dataTable > tbody > tr.child ul.dtr-details {
+
+.dataTable>tbody>tr.child ul.dtr-details {
+  width: 100%;
   display: inline-block;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-.dataTable > tbody > tr.child ul.dtr-details li {
+
+.dataTable>tbody>tr.child ul.dtr-details li {
   border-bottom: 1px solid #efefef;
   padding: 0.5em 0;
 }
-.dataTable > tbody > tr.child ul.dtr-details li:first-child {
+
+.dataTable>tbody>tr.child ul.dtr-details li:first-child {
   padding-top: 0;
 }
-.dataTable > tbody > tr.child ul.dtr-details li:last-child {
+
+.dataTable>tbody>tr.child ul.dtr-details li:last-child {
   border-bottom: none;
 }
-.dataTable > tbody > tr.child span.dtr-title {
+
+.dataTable>tbody>tr.child span.dtr-title {
   display: inline-block;
   min-width: 75px;
   font-weight: bold;
@@ -353,6 +352,7 @@ div.dtr-modal {
   z-index: 100;
   padding: 10em 1em;
 }
+
 div.dtr-modal div.dtr-modal-display {
   position: absolute;
   top: 0;
@@ -371,10 +371,12 @@ div.dtr-modal div.dtr-modal-display {
   -webkit-box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
           box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
 }
+
 div.dtr-modal div.dtr-modal-content {
   position: relative;
   padding: 1em;
 }
+
 div.dtr-modal div.dtr-modal-close {
   position: absolute;
   top: 6px;
@@ -388,9 +390,11 @@ div.dtr-modal div.dtr-modal-close {
   cursor: pointer;
   z-index: 12;
 }
+
 div.dtr-modal div.dtr-modal-close:hover {
   background-color: #eaeaea;
 }
+
 div.dtr-modal div.dtr-modal-background {
   position: fixed;
   top: 0;
@@ -406,6 +410,7 @@ div.dtr-modal div.dtr-modal-background {
     width: 95%;
   }
 }
+
 div.dtr-bs-modal table.table tr:first-child td {
   border-top: none;
 }
